Publish NZ phone number update.

--- a/index.html
+++ b/index.html
@@ -35,8 +35,11 @@
 
                 </div>
                 <div class="col-9">
-                    <h1 id="phil-de-joux">Phil de Joux</h1>
-<div class="fluid-container">
+                    <article>
+<header>
+    <h1>Phil de Joux</h1>
+</header>
+    <div class="fluid-container">
 <div class="row">
 <div class="col-9 align-self-left" style="padding-left: 0">
 <p>I go by two monikers on the interwebs:</p>
@@ -60,6 +63,8 @@
 </div>
 </div>
 </div>
+</article>
+
                 </div>
             </div>
         </div>
