Add the stub of a post about crop models.

--- a/cv/index.html
+++ b/cv/index.html
@@ -312,7 +312,7 @@ Develop server and browser components of a live feed.</li>
 Technical review of Expert F#, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.</li>
 <li><span class="travieo">▩</span> <code>2011/08-2015/10</code> <a href="http://www.travieo.com"><strong>Travieo</strong></a><br />
 Develop a travel booking website.</li>
-<li><span class="croplogic">▩</span> <code>2008/01-2011/08</code> <a href="http://www.croplogic.com"><strong>CropLogic</strong></a><br />
+<li><span class="croplogic">▩</span> <code>2008/01-2011/08</code> <a name="croplogic" href="http://www.croplogic.com"><strong>CropLogic</strong></a><br />
 Work with scientists tuning and testing a discrete event simulation crop model. Work with the product team developing a website for potato growers. Pull in external weather and field observations. Provide a way for growers to setup their crops, to enter their irrigation and fertilizer applications and to view the model recommended future inputs and expected yields.</li>
 <li><span class="waimak">▩</span> <code>2007/12-2011/04</code> <a href="http://www.waimakariri.govt.nz"><strong>Waimakariri District Council</strong></a><br />
 Develop a website for logging public submissions and scheduling hearing time slots.</li>
