--- a/p/index.html
+++ b/p/index.html
@@ -48,7 +48,8 @@
 <li>Being on the sharp end is more exciting.</li>
 </ul>
 <p>When I first started working as a software developer, the team I joined was developing for DOS with Turbo Pascal on the 80486. I’ve learnt a lot since then.</p>
-<p>I’ve disorientated from objects and prefer first class functions, algebraic data types and lazy evaluation.</p>
+<p>I’ve been disorientated debugging objects with nested state and shared state. Sure the scope of changes can be restricted among friends and among methods partitioned into public, private, protected and internal groups but that doesn’t really help that much.</p>
+<p>I have reorientated towards first class functions, algebraic data types, persistent data structures and lazy evaluation. Development life is much simpler now.</p>
 </article>
 
                     <hr />
