Publish cv update.

--- a/b/index.html
+++ b/b/index.html
@@ -42,12 +42,14 @@
     
     <p>If you’re interested in working together, these are the kinds of services I can provide.</p>
 <ul>
+<li>Writing a problem and its possible solutions.</li>
+<li>Assessing, prototyping and recommending a tech stack.</li>
 <li>Getting setup for software development.</li>
-<li>Ensuring quality; testing what works now and discovering new failures.</li>
-<li>Assessing, prototyping and recommending a stack.</li>
-<li>Mentoring, coaching and training.</li>
-<li>Contributing fixes, raising, commenting on and triaging issues.</li>
 <li>Automating builds and deployments.</li>
+<li>Contributing fixes, raising, commenting on and triaging issues.</li>
+<li>Testing what works now and discovering new failures.</li>
+<li>Coding anew and refactoring existing codebases.</li>
+<li>Mentoring, coaching and training.</li>
 </ul>
 </article>
 
@@ -66,7 +68,7 @@
 <div class="col-6">
   <address>
     <i class="fa fa-envelope"></i><a href="mailto:info@blockscope.com"> info@blockscope.com</a><br />
-    <i class="fa fa-phone"></i> +64-27-321-3890<br />
+    <i class="fa fa-phone"></i> +1-450-675-9180<br />
   </address>
   <i class="fa fa-github"></i>
   <a href="https://github.com/blockscope" target="_blank">github/blockscope</a><br />
