Publish changes to /p and /b.

--- a/b/index.html
+++ b/b/index.html
@@ -42,13 +42,13 @@
     
     <p>If you’re interested in working together, these are the kinds of services I can provide.</p>
 <ul>
-<li>Writing a problem and its possible solutions.</li>
+<li>Writing up a problem statement, investigating and proposing solutions.</li>
 <li>Assessing, prototyping and recommending a tech stack.</li>
 <li>Getting setup for software development.</li>
 <li>Automating builds and deployments.</li>
 <li>Contributing fixes, raising, commenting on and triaging issues.</li>
 <li>Testing what works now and discovering new failures.</li>
-<li>Coding anew and refactoring existing codebases.</li>
+<li>Fresh coding and untangling knotty codebases.</li>
 <li>Mentoring, coaching and training.</li>
 </ul>
 </article>
