--- a/index.html
+++ b/index.html
@@ -52,11 +52,11 @@
 </ul>
 <p>I spent my youth climbing back in the ’80s. With no sponsors to upset, new route names were sometimes an irreverent play on words, twisted in bad taste or simply bad puns. I made up more route names than I ever climbed. I try to stay true to my roots (routes with diversionary and distracting names) so you’ll see that:</p>
 <ul>
-<li><strong>worker threads</strong> run through the curriculum vitae</li>
-<li>the side project is a <strong>labour of love</strong></li>
-<li>little by little, I hope I help others with small <strong>supporting acts</strong> of open source</li>
-<li><strong>post it, notes</strong> are notes posted here</li>
-<li><strong>reflected tweets</strong> are mirrored twitter interactions (twitteractions)</li>
+<li><strong>“worker threads”</strong> run through the curriculum vitae</li>
+<li>the side project is a <strong>“labour of love”</strong></li>
+<li>little by little, I hope I help others with small <strong>“supporting acts”</strong> of open source</li>
+<li><strong>“post it, notes”</strong> are notes posted here</li>
+<li><strong>“reflected tweets”</strong> are mirrored twitter interactions</li>
 </ul>
 </div>
 <div class="col-3 align-self-center">
