--- a/p/index.html
+++ b/p/index.html
@@ -40,7 +40,7 @@
     <h1>@philderbeast</h1>
 </header>
     
-    <p>I develop software and climb. I would rather climb professionally and code for pleasure. I have some advice that could apply to both activities:</p>
+    <p>I develop software and climb. Proficient at both, I have some advice that could apply to either activity:</p>
 <ul>
 <li>Check your knots and always have a backup.</li>
 <li>Gear freaking is a distraction.</li>
@@ -48,7 +48,7 @@
 <li>Being on the sharp end is more exciting.</li>
 </ul>
 <p>When I first started working as a software developer, the team I joined was developing for DOS with Turbo Pascal on the 80486. I’ve learnt a lot since then.</p>
-<p>I’ve been disorientated debugging objects with nested state and shared state. Sure the scope of changes can be restricted among friends and among methods partitioned into public, private, protected and internal groups but that doesn’t really help that much.</p>
+<p>I’ve been disorientated debugging objects with nested state and shared state. Sure the scope of changes can be restricted among methods partitioned into public, private, protected and internal groups but that doesn’t really help that much.</p>
 <p>I have reorientated towards first class functions, algebraic data types, persistent data structures and lazy evaluation. Development life is much simpler now.</p>
 </article>
 
