--- a/b/index.html
+++ b/b/index.html
@@ -16,7 +16,7 @@
     <body>
         <div class="container">
             <div class="row">
-                <div id="side" class="col-3 card">
+                <div id="side" class="col-3 card d-print-none">
                     <div class="card-body">
     <h1 class="card-title" title="block scope delimited with curlies"><a href="../">{...}</a></h1>
 
@@ -34,7 +34,7 @@
 </div>
 
                 </div>
-                <div class="col-9">
+                <div id="content">
                     <article>
     <header>
     <table>
