--- a/cv/index.html
+++ b/cv/index.html
@@ -290,7 +290,7 @@
 </div>
 
                 </div>
-                <div class="col-9">
+                <div id="content">
                     <article>
     <header>
     <table>
