--- a/cv/index.html
+++ b/cv/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>CV - Phil de Joux</title>
         <link rel="stylesheet" href="../css/app.css">
         <link rel="apple-touch-icon" sizes="180x180" href="../apple-touch-icon.png">
