--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <title>Phil de Joux</title>
         <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.css" integrity="sha384-zB1R0rpPzHqg7Kpt0Aljp8JPLqbXI3bhnPWROx27a9N0Ll6ZP/+DiW/UqRcLbRjq" crossorigin="anonymous">
         <script defer src="https://cdn.jsdelivr.net/npm/katex@0.11.1/dist/katex.min.js" integrity="sha384-y23I5Q6l+B6vatafAwxRu/0oK/79VlbSz7Q9aiSZUvyWYIYsd+qj+o24G5ZU2zJz" crossorigin="anonymous"></script>
@@ -79,7 +80,7 @@
 </div>
 <div class="col-3 align-self-center">
 <div class="d-flex justify-content-center">
-<p><img src="./images/selfie.jpg" class="shadow-lg img-thumbnail" style="width: 14em;" /></p>
+<p><img alt="selfie" src="./images/selfie.jpg" class="shadow-lg img-thumbnail" style="width: 14em;" /></p>
 </div>
 </div>
 </div>
