Publish rel noopener on _blank target links.

--- a/p/index.html
+++ b/p/index.html
@@ -117,15 +117,15 @@
     </address>
     <div class="d-print-none">
         <i class="fa fa-github"></i>
-        <a href="https://github.com/philderbeast" target="_blank">github/philderbeast</a><br />
+        <a href="https://github.com/philderbeast" target="_blank" rel="noopener">github/philderbeast</a><br />
         <i style="color:#1da1f2" class="fa fa-twitter"></i>
-        <a href="https://twitter.com/philderbeast" target="_blank">twitter</a><br />
+        <a href="https://twitter.com/philderbeast" target="_blank" rel="noopener">twitter</a><br />
         <i style="color:#0077b5" class="fa fa-linkedin"></i>
-        <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank">linkedin</a><br />
+        <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank" rel="noopener">linkedin</a><br />
         <i style="color:#f48024" class="fa fa-stack-overflow"></i>
-        <a href="https://stackoverflow.com/users/story/1503186" target="_blank">stackoverflow</a><br />
+        <a href="https://stackoverflow.com/users/story/1503186" target="_blank" rel="noopener">stackoverflow</a><br />
         <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
-        <a href="https://hackage.haskell.org/user/philderbeast" target="_blank">hackage</a><br />
+        <a href="https://hackage.haskell.org/user/philderbeast" target="_blank" rel="noopener">hackage</a><br />
     </div>
 </div>
 
