Publish font and index content changes.

--- a/index.html
+++ b/index.html
@@ -95,7 +95,7 @@
 <li><strong><a href="./p">@philderbeast</a></strong> is a nickname given to me by <a href="https://twitter.com/highluxphoto">@highluxphoto</a></li>
 <li><strong><a href="./b">@blockscope</a></strong> is a company I own and work for doing software development</li>
 </ul>
-<p>I spent my youth climbing back in the ’80s. With no sponsors to upset, new route names were sometimes an irreverent play on words, twisted in bad taste or simply bad puns. When you see a play on words, it’s just play.</p>
+<p>I enjoy rock climbing, hang gliding, cycling and tramping (hiking).</p>
 </div>
 <div class="col-3 align-self-center">
 <div class="d-flex justify-content-center">
