Update the CV, upgrade hakyll and build with ghc-8.10.4.

--- a/cv/index.html
+++ b/cv/index.html
@@ -73,14 +73,17 @@
 <div class="work-history">
 <pre>
 <code>
-  &lt;F#, Elm, Haskell and SQL&gt;
-~~~|---<span class="tagly">GGGG</span>+-------<span class="aqualinc">|AAAAAAA+AAAAAAA|AAAAAAA+A</span><span class="flaretiming">FFFFFF|FFFFFFF+FFFFFFF|FFFFFF</span>~+~~~~~~~|~~~
+  &lt;F#, Elm, Haskell and SQL&gt;                 <span class="flaretiming">FFFFFFFFFFFFFFFFFFFFFFF</span>  <span class="flaretiming">F...</span>
+~~~|---<span class="tagly">GGGG</span>+-------<span class="aqualinc">|AAAAAAA+AAAAAAA|AAAAAAA+A</span>------|-------+-------|<span class="bracco">BB</span>----~+~~~~~~~|~~~
   2012<span class="apress">-PPPPPPPPPP-2014-PPPPPPPPPP-2</span>016            2018            2020            2022
 </code>
 </pre>
 <ul>
 <li>
 <span class="flaretiming"><code>F</code> <code>?</code> ▩ <code>2017/04—202~/~~</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> ☞ For scoring hang gliding and paragliding competitions; <a href="https://github.com/BlockScope/CIVL-GAP#readme">typeset the rules</a> as LaTeX • <a href="https://github.com/BlockScope/CIVL-GAP/issues">question</a> how to interpret some rules • develop a command line <a href="https://github.com/BlockScope/flare-timing#readme">reference implementation</a> • develop web visualizations of workings, results and discrepencies across implementations • find, raise and fix bugs in the official implementation, <a href="http://fs.fai.org/">FS</a> • rescore and publish competitions.
+</li>
+<li>
+<span class="bracco"><code>B</code> <code>$</code> ▩ <code>2020/02—2020/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ For interpreting dicom images from <a href="https://www.contrastultrasound-modality.com/index.php">contrast enhanced ultrasound</a>; develop a prototype desktop app.
 </li>
 <li>
 <span class="aqualinc"><code>A</code> <code>$</code> ▩ <code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> ☞ For monitoring breaches of regulated levels of water take and pollutant discharge; design a relational database schema • unmunge munged data, develop system services to pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a> web services • expose web services over the top of the relational and time series data • develop separate web frontends for administrators and farmers • generate annual reports by pulling data from web services and typeset with LaTeX.
