--- a/cv/index.html
+++ b/cv/index.html
@@ -69,85 +69,83 @@
     
     <a href="../pdf/cv-phil-de-joux.pdf" role="button"><code>$&gt; view --format=pdf</code></a><br />
 <a href="../" role="button"><code>$&gt; exit</code></a><br />
-
+<br />
 <div class="work-history">
-<pre>
-<code>
-  &lt;F#, Elm, Haskell and SQL&gt;                 <span class="flaretiming">FFFFFFFFFFFFFFFFFFFFFFF</span>  <span class="flaretiming">F...</span>
-~~~|---<span class="tagly">GGGG</span>+-------<span class="aqualinc">|AAAAAAA+AAAAAAA|AAAAAAA+A</span>------|-------+-------|<span class="bracco">BB</span>----~+~~~~~~~|~~~
-  2012<span class="apress">-PPPPPPPPPP-2014-PPPPPPPPPP-2</span>016            2018            2020            2022
-</code>
-</pre>
+<h2 class="work-section">
+&lt;F#, Elm, Haskell &amp; SQL&gt;
+</h2>
 <ul>
 <li>
-<span class="flaretiming"><code>F</code> <code>?</code> ▩ <code>2017/04—202~/~~</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> ☞ For scoring hang gliding and paragliding competitions; <a href="https://github.com/BlockScope/CIVL-GAP#readme">typeset the rules</a> as LaTeX • <a href="https://github.com/BlockScope/CIVL-GAP/issues">question</a> how to interpret some rules • develop a command line <a href="https://github.com/BlockScope/flare-timing#readme">reference implementation</a> • develop web visualizations of workings, results and discrepencies across implementations • find, raise and fix bugs in the official implementation, <a href="http://fs.fai.org/">FS</a> • rescore and publish competitions.
+<span class="flaretiming"><code>F</code> <code>?</code> ▩ </span><span class="date"><code>2017/04—202~/~~</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> ☞ For scoring hang gliding and paragliding competitions; <a href="https://github.com/BlockScope/CIVL-GAP#readme">typeset the rules</a> as LaTeX • <a href="https://github.com/BlockScope/CIVL-GAP/issues">question</a> how to interpret some rules • develop a command line <a href="https://github.com/BlockScope/flare-timing#readme">reference implementation</a> • develop web visualizations of workings, results and discrepencies across implementations • find, raise and fix bugs in the official implementation, <a href="http://fs.fai.org/">FS</a> • rescore and publish competitions.
 </li>
 <li>
-<span class="bracco"><code>B</code> <code>$</code> ▩ <code>2020/02—2020/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ For interpreting dicom images from <a href="https://www.contrastultrasound-modality.com/index.php">contrast enhanced ultrasound</a>; develop a prototype desktop app.
+<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2020/02—2020/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ For interpreting dicom images from <a href="https://www.contrastultrasound-modality.com/index.php">contrast enhanced ultrasound</a>; develop a prototype desktop app.
 </li>
 <li>
-<span class="aqualinc"><code>A</code> <code>$</code> ▩ <code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> ☞ For monitoring breaches of regulated levels of water take and pollutant discharge; design a relational database schema • unmunge munged data, develop system services to pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a> web services • expose web services over the top of the relational and time series data • develop separate web frontends for administrators and farmers • generate annual reports by pulling data from web services and typeset with LaTeX.
+<span class="aqualinc"><code>A</code> <code>$</code> ▩ </span><span class="date"><code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> ☞ For monitoring breaches of regulated levels of water take and pollutant discharge; design a relational database schema • unmunge munged data, develop system services to pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a> web services • expose web services over the top of the relational and time series data • develop separate web frontends for administrators and farmers • generate annual reports by pulling data from web services and typeset with LaTeX.
 </li>
 <li>
-<span class="tagly"><code>G</code> <code>$</code> ▩ <code>2012/07—2012/12</code></span> <a href="https://angel.co/company/tagly"><strong>Tagly</strong></a> ☞ Develop server and browser components of a live feed.
+<span class="tagly"><code>G</code> <code>$</code> ▩ </span><span class="date"><code>2012/07—2012/12</code></span> <a href="https://angel.co/company/tagly"><strong>Tagly</strong></a> ☞ Develop server and browser components of a live feed.
 </li>
 <li>
-<span class="apress"><code>P</code> <code>#</code> ▩ <code>2012/06—2015/11</code></span> <a href="https://www.apress.com"><strong>Apress</strong></a> ☞ Technical review of Expert F#, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.
+<span class="apress"><code>P</code> <code>#</code> ▩ </span><span class="date"><code>2012/06—2015/11</code></span> <a href="https://www.apress.com"><strong>Apress</strong></a> ☞ Technical review of Expert F#, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.
 </li>
 <ul>
 </div>
 <div class="work-history">
-<pre>
-<code>
-  &lt;C# & SQL&gt;               <span class="croplogic">LLLLLLLLLLLLLLLLLLLLLLLLLLLLL</span>       <span class="cactus">CCCCC</span>
-~~~<span class="nutricentre">|NNNNNNN+NNNNNNN|NNNNNNN+NN</span>-----|-------+-------|---<span class="travieo">VVVV+VVVVVVV|VVVVVVV+VVVVVVV|VVVVVV</span>-+~~~
- <span class="niwa">-2005-WWWWWWWWWW-2007-W</span>   <span class="waimak">DDDDDD-2009-DDDDDDDDDD-2011</span>            2013            2015
-</code>
-</pre>
+<h2 class="work-section">
+&lt;C# &amp; SQL&gt;
+</h2>
 <ul>
 <li>
-<span class="cactus"><code>C</code> <code>#</code> ▩ <code>2012/08—2013/02</code></span> <a href="https://www.cactusoutdoor.co.nz/"><strong>Cactus</strong> Outdoor</a> ☞ Scope and prototype upgrades to a production planning system for factory operations.
+<span class="cactus"><code>C</code> <code>#</code> ▩ </span><span class="date"><code>2012/08—2013/02</code></span> <a href="https://www.cactusoutdoor.co.nz/"><strong>Cactus</strong> Outdoor</a> ☞ Scope and prototype upgrades to a production planning system for factory operations.
 </li>
 <li>
-<span class="travieo"><code>V</code> <code>#</code> ▩ <code>2011/08—2015/10</code></span> <a href="http://www.travieo.com"><strong>Travieo</strong></a> ☞ Develop a travel booking website.
+<span class="travieo"><code>V</code> <code>#</code> ▩ </span><span class="date"><code>2011/08—2015/10</code></span> <a href="http://www.travieo.com"><strong>Travieo</strong></a> ☞ Develop a travel booking website.
 </li>
 <li>
-<span class="croplogic"><code>L</code> <code>$</code> ▩ <code>2008/01—2011/08</code></span> <em>CropLogic</em> ☞ For more potato yield with less water and fertilizer input and less pollutant runoff; port, tune and test a discrete event simulation crop model with scientists • pull in field data and external weather data from numerous and disparate sources • develop a website for growers to setup their crops to enter their irrigation and fertilizer applications and to view the model recommended future inputs and expected yields.
+<span class="croplogic"><code>L</code> <code>$</code> ▩ </span><span class="date"><code>2008/01—2011/08</code></span> <em>CropLogic</em> ☞ For more potato yield with less water and fertilizer input and less pollutant runoff; port, tune and test a discrete event simulation crop model with scientists • pull in field data and external weather data from numerous and disparate sources • develop a website for growers to setup their crops to enter their irrigation and fertilizer applications and to view the model recommended future inputs and expected yields.
 </li>
 <li>
-<span class="waimak"><code>D</code> <code>#</code> ▩ <code>2007/12—2011/04</code></span> <a href="http://www.waimakariri.govt.nz"><strong>Waimakariri District Council</strong></a> ☞ Develop a website logging public submissions and scheduling hearing time slots.
+<span class="waimak"><code>D</code> <code>#</code> ▩ </span><span class="date"><code>2007/12—2011/04</code></span> <a href="http://www.waimakariri.govt.nz"><strong>Waimakariri District Council</strong></a> ☞ Develop a website logging public submissions and scheduling hearing time slots.
 </li>
 <li>
-<span class="nutricentre"><code>N</code> <code>$</code> ▩ <code>2003/07—2008/05</code></span> <a href="https://www.naturalproductsonline.co.uk/news/tesco-closes-loss-making-nutricentre-operation/"><strong>NutriCentre</strong></a> ☞ Develop an online store.
+<span class="nutricentre"><code>N</code> <code>$</code> ▩ </span><span class="date"><code>2003/07—2008/05</code></span> <a href="https://www.naturalproductsonline.co.uk/news/tesco-closes-loss-making-nutricentre-operation/"><strong>NutriCentre</strong></a> ☞ Develop an online store.
 </li>
 <li>
-<span class="niwa"><code>W</code> <code>#</code> ▩ <code>2003/06—2007/07</code></span> <a href="http://www.niwa.co.nz"><strong>NIWA</strong></a> ☞ Develop tools and the <a href="http://edenz.niwa.co.nz">EDENZ</a> website for publishing environmental time series data.
+<span class="niwa"><code>W</code> <code>#</code> ▩ </span><span class="date"><code>2003/06—2007/07</code></span> <a href="http://www.niwa.co.nz"><strong>NIWA</strong></a> ☞ Develop tools and the <a href="http://edenz.niwa.co.nz">EDENZ</a> website for publishing environmental time series data.
 </li>
 </ul>
 </div>
 <div class="work-history">
-<pre>
-<code>
-  &lt;C++&gt;
-~~~<span class="trimble">|TTTTTTT+TTTTTTT|TTTTTTT+TTTTTTT|</span>---<span class="sml">SS</span><span class="obvious">OO+OOOOOOO|O</span>--<span class="aspelle">EEEE+EEEEE</span>--|---<span class="nutricentre">NNNNN+NNNNNNN|</span>~~~
-  1995            1997            1999            2001            2003<span class="niwa">-WWWWWWWWWWW-2005-</span>
-</code>
-</pre>
+<h2 class="work-section">
+&lt;C++&gt;
+</h2>
 <ul>
 <li>
-<span class="aspelle"><code>E</code> <code>$</code> ▩ <code>2001/08—2002/09</code></span> <em>Aspelle</em> ☞ Develop authentication and authorization parts of a security product.
+<span class="aspelle"><code>E</code> <code>$</code> ▩ </span><span class="date"><code>2001/08—2002/09</code></span> <em>Aspelle</em> ☞ Develop authentication and authorization parts of a security product.
 </li>
 <li>
-<span class="obvious"><code>O</code> <code>$</code> ▩ <code>1999/10—2001/03</code></span> <em>Obvious Technology</em> ☞ Develop a product for searching video, hitting on annotated key frames.
+<span class="obvious"><code>O</code> <code>$</code> ▩ </span><span class="date"><code>1999/10—2001/03</code></span> <em>Obvious Technology</em> ☞ Develop a product for searching video, hitting on annotated key frames.
 </li>
 <li>
-<span class="sml"><code>S</code> <code>$</code> ▩ <code>1999/07—1999/09</code></span> <a href="http://www.smltd.com"><strong>Software Migrations</strong></a> ☞ Develop a frontend for tools translating mainframe assembly code modules to C.
+<span class="sml"><code>S</code> <code>$</code> ▩ </span><span class="date"><code>1999/07—1999/09</code></span> <a href="http://www.smltd.com"><strong>Software Migrations</strong></a> ☞ Develop a frontend for tools translating mainframe assembly code modules to C.
 </li>
 <li>
-<span class="trimble"><code>T</code> <code>$</code> ▩ <code>1995/02—1999/01</code></span> <a href="http://www.trimble.com"><strong>Trimble</strong></a> ☞ Maintain the inhouse computer graphics library, improving clipping and multithreading.
+<span class="trimble"><code>T</code> <code>$</code> ▩ </span><span class="date"><code>1995/02—1999/01</code></span> <a href="http://www.trimble.com"><strong>Trimble</strong></a> ☞ Maintain the inhouse computer graphics library, improving clipping and multithreading.
 </div>
 </li>
 <ul>
+<pre>
+<code>
+                                                         <span class="cactus">CC</span>
+                                           <span class="waimak">DDDDDDDDDDD</span>   <span class="apress">PPPPPPPPPP</span>
+                              <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>                <span class="bracco">B</span>
+    <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFFF</span>
+ <span class="date">~~~|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+~~~</span>
+ <span class="date">  1995           2000           2005           2010           2015           2020</span>
+</code>
+</pre>
 </article>
 
                     <hr />
@@ -168,7 +166,7 @@
         <i class="fa fa-phone"></i> +1-450-675-9180<br />
         <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br />
         <br />
-        <pre>&dollar;=full time, #=part time, ?=unpaid</pre>
+        <pre><code><span class="date">&dollar;=full time, #=part time, ?=unpaid</span></code></pre>
     </address>
 </div>
 <div class="col-4">
