--- a/tweet/index.html
+++ b/tweet/index.html
@@ -42,12 +42,16 @@
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="../post">blog</a></li>
-            <li class="nav-item"><a class="nav-link" href="../project">fly</a></li>
-            <li class="nav-item"><a class="nav-link" href="../contrib">donate</a></li>
-            <li class="nav-item"><a class="nav-link" href="../b">company</a></li>
-            <li class="nav-item"><a class="nav-link" href="../p">self</a></li>
+            <li class="nav-item"><a class="nav-link" href="../b">consult</a></li>
             <li class="nav-item"><a class="nav-link" href="../cv">work</a></li>
+            <li class="nav-item"><a class="nav-link" href="../contrib">contribute</a></li>
+            <li class="nav-item"><a class="nav-link" href="../post">blog</a></li>
+        </ul>
+        <br />
+        <br />
+        <ul class="nav flex-column">
+            <li class="nav-item"><a class="nav-link" href="../p">introspect</a></li>
+            <li class="nav-item"><a class="nav-link" href="../project">fly</a></li>
             <li class="nav-item"><a class="nav-link" href="../tweet">tweet</a></li>
         </ul>
     </nav>
