Upgrade font-awesome and yarn.

--- a/p/index.html
+++ b/p/index.html
@@ -115,18 +115,18 @@
 </div>
 <div class="col-6">
     <address>
-        <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
-        <i class="fa fa-phone"></i> +1-450-675-9180<br />
-        <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br />
+        <i class="fas fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
+        <i class="fas fa-phone"></i> +1-450-675-9180<br />
+        <i style="color:#00aff0" class="fab fa-skype"></i> philderbeast<br />
     </address>
     <div class="d-print-none">
-        <i class="fa fa-github"></i>
+        <i class="fab fa-github"></i>
         <a href="https://github.com/philderbeast" target="_blank" rel="noopener">github/philderbeast</a><br />
-        <i style="color:#1da1f2" class="fa fa-twitter"></i>
+        <i style="color:#1da1f2" class="fab fa-twitter"></i>
         <a href="https://twitter.com/philderbeast" target="_blank" rel="noopener">twitter</a><br />
-        <i style="color:#0077b5" class="fa fa-linkedin"></i>
+        <i style="color:#0077b5" class="fab fa-linkedin"></i>
         <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank" rel="noopener">linkedin</a><br />
-        <i style="color:#f48024" class="fa fa-stack-overflow"></i>
+        <i style="color:#f48024" class="fab fa-stack-overflow"></i>
         <a href="https://stackoverflow.com/users/story/1503186" target="_blank" rel="noopener">stackoverflow</a><br />
         <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
         <a href="https://hackage.haskell.org/user/philderbeast" target="_blank" rel="noopener">hackage</a><br />
