--- a/cv/index.html
+++ b/cv/index.html
@@ -76,10 +76,13 @@
 </h2>
 <ul>
 <li>
-<span class="flaretiming"><code>F</code> <code>?</code> ▩ </span><span class="date"><code>2017/04—202~/~~</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> ☞ For scoring hang gliding and paragliding competitions; <a href="https://github.com/BlockScope/CIVL-GAP#readme">typeset the rules</a> as LaTeX • <a href="https://github.com/BlockScope/CIVL-GAP/issues">question</a> how to interpret some rules • develop a command line <a href="https://github.com/BlockScope/flare-timing#readme">reference implementation</a> • develop web visualizations of workings, results and discrepencies across implementations • find, raise and fix bugs in the official implementation, <a href="http://fs.fai.org/">FS</a> • rescore and publish competitions.
+<span class="cit"><code>C</code> <code>$</code> ▩ </span><span class="date"><code>2021/06—2021/10</code></span> <a href="http://www.compositional-it.com"><strong>Compositional</strong></a> ☞ Review of <a href="https://safe-stack.github.io/">SAFE Stack</a> training material; slides, demos and labs.
 </li>
 <li>
-<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2020/02—2020/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ For interpreting dicom images from <a href="https://www.contrastultrasound-modality.com/index.php">contrast enhanced ultrasound</a>; develop a prototype desktop app.
+<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ For interpreting dicom images from <a href="https://www.contrastultrasound-modality.com/index.php">contrast enhanced ultrasound</a>; develop a prototype desktop app.
+</li>
+<li>
+<span class="flaretiming"><code>F</code> <code>?</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> ☞ For scoring hang gliding and paragliding competitions; <a href="https://github.com/BlockScope/CIVL-GAP#readme">typeset the rules</a> as LaTeX • <a href="https://github.com/BlockScope/CIVL-GAP/issues">question</a> how to interpret some rules • develop a command line <a href="https://github.com/BlockScope/flare-timing#readme">reference implementation</a> • develop web visualizations of workings, results and discrepencies across implementations • find, raise and fix bugs in the official implementation, <a href="http://fs.fai.org/">FS</a> • rescore and publish competitions.
 </li>
 <li>
 <span class="aqualinc"><code>A</code> <code>$</code> ▩ </span><span class="date"><code>2014/02—2017/04</code></span> <a href="http://www.aqualinc.co.nz"><strong>Aqualinc Research</strong></a> ☞ For monitoring breaches of regulated levels of water take and pollutant discharge; design a relational database schema • unmunge munged data, develop system services to pull and cache metadata from <a href="http://www.hilltop.co.nz/"><strong>Hilltop</strong></a> web services • expose web services over the top of the relational and time series data • develop separate web frontends for administrators and farmers • generate annual reports by pulling data from web services and typeset with LaTeX.
@@ -140,8 +143,8 @@
 <code>
                                                          <span class="cactus">CC</span>
                                            <span class="waimak">DDDDDDDDDDD</span>   <span class="apress">PPPPPPPPPP</span>
-                              <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>                <span class="bracco">B</span>
-    <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFFF</span>
+                              <span class="niwa">WWWWWWWWWWWW</span> <span class="croplogic">LLLLLLLLLLLL</span><span class="travieo">VVVVVVVVVVV</span>
+    <span class="trimble">TTTTTTTTTTTTT</span> <span class="sml">S</span><span class="obvious">OOOOO</span><span class="aspelle">EEEE</span>  <span class="nutricentre">NNNNNNNNNNNNNNN</span>            <span class="tagly">GG</span>   <span class="aqualinc">AAAAAAAAAA</span><span class="flaretiming">FFFFFFFFFFF</span><span class="bracco">B</span><span class="cit">C</span>
  <span class="date">~~~|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+--+--+--|--+--+~~~</span>
  <span class="date">  1995           2000           2005           2010           2015           2020</span>
 </code>
@@ -162,22 +165,22 @@
 </div>
 <div class="col-4">
     <address>
-        <i class="fa fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
-        <i class="fa fa-phone"></i> +1-450-675-9180<br />
-        <i style="color:#00aff0" class="fa fa-skype"></i> philderbeast<br />
+        <i class="fas fa-envelope"></i><a href="mailto:phil.dejoux@blockscope.com"> phil.dejoux@blockscope.com</a><br />
+        <i class="fas fa-phone"></i> +1-450-675-9180<br />
+        <i style="color:#00aff0" class="fab fa-skype"></i> philderbeast<br />
         <br />
         <pre><code><span class="date">&dollar;=full time, #=part time, ?=unpaid</span></code></pre>
     </address>
 </div>
 <div class="col-4">
     <div class="d-print-none">
-        <i class="fa fa-github"></i>
+        <i class="fab fa-github"></i>
         <a href="https://github.com/philderbeast" target="_blank" rel="noopener">github/philderbeast</a><br />
-        <i style="color:#1da1f2" class="fa fa-twitter"></i>
+        <i style="color:#1da1f2" class="fab fa-twitter"></i>
         <a href="https://twitter.com/philderbeast" target="_blank" rel="noopener">twitter</a><br />
-        <i style="color:#0077b5" class="fa fa-linkedin"></i>
+        <i style="color:#0077b5" class="fab fa-linkedin"></i>
         <a href="http://www.linkedin.com/pub/phil-de-joux/0/b19/a51" target="_blank" rel="noopener">linkedin</a><br />
-        <i style="color:#f48024" class="fa fa-stack-overflow"></i>
+        <i style="color:#f48024" class="fab fa-stack-overflow"></i>
         <a href="https://stackoverflow.com/users/story/1503186" target="_blank" rel="noopener">stackoverflow</a><br />
         <img style="position:relative;top=-20px" src="https://hackage.haskell.org/static/favicon.png" width="14px" height="14px" />
         <a href="https://hackage.haskell.org/user/philderbeast" target="_blank" rel="noopener">hackage</a><br />
