--- a/cv/index.html
+++ b/cv/index.html
@@ -79,7 +79,7 @@
 <span class="cit"><code>C</code> <code>$</code> ▩ </span><span class="date"><code>2021/06—2021/10</code></span> <a href="http://www.compositional-it.com"><strong>Compositional</strong></a> ☞ Review of <a href="https://safe-stack.github.io/">SAFE Stack</a> training material; slides, demos and labs.
 </li>
 <li>
-<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ For interpreting dicom images from <a href="https://www.contrastultrasound-modality.com/index.php">contrast enhanced ultrasound</a>; develop a prototype desktop app.
+<span class="bracco"><code>B</code> <code>$</code> ▩ </span><span class="date"><code>2021/02—2021/03</code></span> <a href="http://www.bracco.com"><strong>Bracco</strong></a> ☞ Develop a prototype for interpreting <a href="https://www.contrastultrasound-modality.com/index.php">contrast-enhanced ultrasound</a>.
 </li>
 <li>
 <span class="flaretiming"><code>F</code> <code>?</code> ▩ </span><span class="date"><code>2017/04—2020/12</code></span> <a href="http://www.flaretiming.com"><strong>Flare Timing</strong></a> ☞ For scoring hang gliding and paragliding competitions; <a href="https://github.com/BlockScope/CIVL-GAP#readme">typeset the rules</a> as LaTeX • <a href="https://github.com/BlockScope/CIVL-GAP/issues">question</a> how to interpret some rules • develop a command line <a href="https://github.com/BlockScope/flare-timing#readme">reference implementation</a> • develop web visualizations of workings, results and discrepencies across implementations • find, raise and fix bugs in the official implementation, <a href="http://fs.fai.org/">FS</a> • rescore and publish competitions.
@@ -91,7 +91,7 @@
 <span class="tagly"><code>G</code> <code>$</code> ▩ </span><span class="date"><code>2012/07—2012/12</code></span> <a href="https://angel.co/company/tagly"><strong>Tagly</strong></a> ☞ Develop server and browser components of a live feed.
 </li>
 <li>
-<span class="apress"><code>P</code> <code>#</code> ▩ </span><span class="date"><code>2012/06—2015/11</code></span> <a href="https://www.apress.com"><strong>Apress</strong></a> ☞ Technical review of Expert F#, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.
+<span class="apress"><code>P</code> <code>#</code> ▩ </span><span class="date"><code>2012/06—2015/11</code></span> <a href="https://www.apress.com"><strong>Apress</strong></a> ☞ Technical review of Expert F# books, editions <a href="https://www.apress.com/us/book/9781430246503">3</a> and <a href="https://www.apress.com/us/book/9781484207413">4</a>.
 </li>
 <li>
 <span class="travieo"><code>V</code> <code>#</code> ▩ </span><span class="date"><code>2011/08—2015/10</code></span> <a href="http://www.travieo.com"><strong>Travieo</strong></a> ☞ Develop a travel booking website.
