Shorten cactus gig description.

--- a/cv/index.html
+++ b/cv/index.html
@@ -104,13 +104,13 @@
 </h2>
 <ul>
 <li>
-<span class="cactus"><code>C</code> <code>#</code> ▩ </span><span class="date"><code>2012/08—2013/02</code></span> <a href="https://www.cactusoutdoor.co.nz/"><strong>Cactus</strong> Outdoor</a> ☞ Scope and prototype upgrades to a production planning system for factory operations.
+<span class="cactus"><code>C</code> <code>#</code> ▩ </span><span class="date"><code>2012/08—2013/02</code></span> <a href="https://www.cactusoutdoor.co.nz/"><strong>Cactus</strong> Outdoor</a> ☞ Scope upgrading a production planning system for factory operations.
 </li>
 <li>
 <span class="croplogic"><code>L</code> <code>$</code> ▩ </span><span class="date"><code>2008/01—2011/08</code></span> <em>CropLogic</em> ☞ For more potato yield with less water and fertilizer input and less pollutant runoff; port, tune and test a discrete event simulation crop model with scientists • pull in field data and external weather data from numerous and disparate sources • develop a website for growers to setup their crops to enter their irrigation and fertilizer applications and to view the model recommended future inputs and expected yields.
 </li>
 <li>
-<span class="waimak"><code>D</code> <code>#</code> ▩ </span><span class="date"><code>2007/12—2011/04</code></span> <a href="http://www.waimakariri.govt.nz"><strong>Waimakariri District Council</strong></a> ☞ Develop a website logging public submissions and scheduling hearing time slots.
+<span class="waimak"><code>D</code> <code>#</code> ▩ </span><span class="date"><code>2007/12—2011/04</code></span> <a href="http://www.waimakariri.govt.nz"><strong>WDC</strong></a> ☞ Develop a website logging public submissions and scheduling hearing time slots.
 </li>
 <li>
 <span class="nutricentre"><code>N</code> <code>$</code> ▩ </span><span class="date"><code>2003/07—2008/05</code></span> <a href="https://www.naturalproductsonline.co.uk/news/tesco-closes-loss-making-nutricentre-operation/"><strong>NutriCentre</strong></a> ☞ Develop an online store.
