Shorten trimble gig description.

--- a/cv/index.html
+++ b/cv/index.html
@@ -135,7 +135,7 @@
 <span class="sml"><code>S</code> <code>$</code> ▩ </span><span class="date"><code>1999/07—1999/09</code></span> <a href="http://www.smltd.com"><strong>Software Migrations</strong></a> ☞ Develop a frontend for tools translating mainframe assembly code modules to C.
 </li>
 <li>
-<span class="trimble"><code>T</code> <code>$</code> ▩ </span><span class="date"><code>1995/02—1999/01</code></span> <a href="http://www.trimble.com"><strong>Trimble</strong></a> ☞ Maintain the inhouse computer graphics library, improving clipping and multithreading.
+<span class="trimble"><code>T</code> <code>$</code> ▩ </span><span class="date"><code>1995/02—1999/01</code></span> <a href="http://www.trimble.com"><strong>Trimble</strong></a> ☞ Maintain computer graphics, improving clipping and multithreading.
 </div>
 </li>
 <ul>
