Include cabal contributions.

--- a/contrib/index.html
+++ b/contrib/index.html
@@ -145,6 +145,8 @@ I added <a href="https://github.com/judah/pier/issues/50">test-suite</a> running
 I helped <a href="https://github.com/tweag/rules_haskell/commits?author=philderbeast">document</a> how to build Haskell fast with Google Bazel and rules_haskell.</li>
 <li><code>commercialhaskell</code><a href="https://docs.haskellstack.org"><strong>/stack</strong></a><br />
 <a href="https://github.com/commercialhaskell/stack/pull/4392/files">Document</a> how to suppress the <code>-nopie</code> warnings on macOS.</li>
+<li><code>haskell</code><a href="https://github.com/haskell/cabal"><strong>/cabal</strong></a><br />
+Raised <a href="https://github.com/haskell/cabal/issues?q=is%3Aissue+author%3Aphilderbeast">issues</a> and supplied <a href="https://github.com/haskell/cabal/pull/7000">documentation</a> for <code>cabal install all:exes</code>.</li>
 <li><code>nmattia</code><a href="https://github.com/nmattia/snack/commits?author=philderbeast"><strong>/snack</strong></a><br />
 An incremental build tool for Haskell projects.</li>
 </ul>
