--- a/index.html
+++ b/index.html
@@ -45,17 +45,13 @@
 
     <nav>
         <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="./b">consult</a></li>
-            <li class="nav-item"><a class="nav-link" href="./cv">work</a></li>
-            <li class="nav-item"><a class="nav-link" href="./contrib">contribute</a></li>
             <li class="nav-item"><a class="nav-link" href="./post">blog</a></li>
-        </ul>
-        <br />
-        <br />
-        <ul class="nav flex-column">
-            <li class="nav-item"><a class="nav-link" href="./p">introspect</a></li>
-            <li class="nav-item"><a class="nav-link" href="./project">fly</a></li>
-            <li class="nav-item"><a class="nav-link" href="./tweet">tweet</a></li>
+            <li class="nav-item"><a class="nav-link" href="./contrib">open sourcery</a></li>
+            <li class="nav-item"><a class="nav-link" href="./tweet">pinned tweets</a></li>
+            <li class="nav-item"><a class="nav-link" href="./project">flying comps</a></li>
+            <li class="nav-item"><a class="nav-link" href="./b">services</a></li>
+            <li class="nav-item"><a class="nav-link" href="./p">about</a></li>
+            <li class="nav-item"><a class="nav-link" href="./cv">CV</a></li>
         </ul>
     </nav>
 </div>
